# MCP_cli_client

./: .gitignore  README.md  ascii_banner.py  main.py  mcp_config.json  pyproject.toml  requirements.txt
docs/: index-en.html  index.html  script.js  styles.css
mcp_server/: MCP_official.py
src/: load_config.py  load_llm.py  mcp_manager.py
src/config/: config.yaml  mcp_config.json
tests/: test_feedback_agent.py  test_gemini.py  test_mcp_module.py
