[project]
name = "mcp-cli-client"
version = "0.1.0"
description = "MCP CLI Client with multi-LLM support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "JIH", email = "" } ]
keywords = ["mcp","cli","llm","gemini","openai"]
py-modules = ["main", "ascii_banner"]
dependencies = [
    "typer>=0.17.3",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "google-generativeai>=0.8.5",
    "openai>=1.106.1",
    "requests>=2.32.5",
    "mcp>=1.13.1",
    "rich>=14.1.0",
]

[project.scripts]
mcp-client = "main:main"

[tool.hatch.build]
include = [
  "main.py",
  "ascii_banner.py",
  "src/",
  "src/config/config.yaml",
  "src/config/mcp_config.json"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "main.py",
  "ascii_banner.py",
  "src/**"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
